--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -41,7 +41,7 @@
         }
         &__list2{
             overflow-y: scroll;
-            height: 55vh;
+            height: 500px;
             &__item{
                 margin-top: 15px;
                 padding-bottom: 15px;
