--- a/src/Components/Main/Main.scss
+++ b/src/Components/Main/Main.scss
@@ -93,8 +93,9 @@
             }
         }
         &__card{
+            margin-bottom: 0;
             border-radius: 2rem;
-            height: 65vh;
+            height: 600px;
             overflow-y: scroll;
             display: flex;
             justify-content: space-between;
