--- a/src/Page/Home/Home.scss
+++ b/src/Page/Home/Home.scss
@@ -1,3 +1,8 @@
 .home{
-    display: flex;
+    &__container{
+        max-width: 1920px;
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
+    }
 }
