--- a/src/App.scss
+++ b/src/App.scss
@@ -1,37 +1,38 @@
 @import './Assets/sass/veriables.scss';
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   min-height: 100vh;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
-.App{
+
+.App {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   min-height: 100vh;
 }
 
-html{
+html {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: .5rem;
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   background: transparent;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
@@ -39,7 +40,7 @@ html{
   border-bottom-right-radius: 1rem;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background-color: var(--orange);
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
@@ -47,19 +48,20 @@ html{
   border-bottom-right-radius: 1rem;
 }
 
-input{
+input {
   outline: none;
   padding-left: 10px;
+  color: #fff;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-ul{
+ul {
   padding-left: 0;
 }
 
-li{
+li {
   list-style-type: none;
 }
