--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -143,3 +143,13 @@
         }
     }
 }
+
+@media (max-width:1450px) {
+    .orders{
+        &__container{
+            &__list2{
+                height: 440px;
+            }
+        }
+    }
+}
