--- a/src/Components/Main/Main.scss
+++ b/src/Components/Main/Main.scss
@@ -1,32 +1,37 @@
 @import '../../Assets/sass/veriables.scss';
 
-.main{
+.main {
     color: #fff;
     background: var(--gray);
     flex-grow: 1;
     height: 100vh;
-    &__container{
+
+    &__container {
         width: 900px;
-        margin:0 auto;
-        &__header{
+        margin: 0 auto;
+
+        &__header {
             margin-top: 30px;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            &__name{
-                &__title{
+
+            &__name {
+                &__title {
                     font-weight: 600;
                     font-size: 38px;
                     line-height: 140%;
                 }
-                &__data{
+
+                &__data {
                     color: #E0E6E9;
                     font-weight: 400;
                     font-size: 16px;
                     line-height: 140%;
                 }
             }
-            &__search{
+
+            &__search {
                 width: 250px;
                 height: 50px;
                 display: flex;
@@ -35,10 +40,12 @@
                 border: 1px solid #393C49;
                 border-radius: 8px;
                 background: var(--darkGray);
-                label{
+
+                label {
                     padding-left: 15px;
                 }
-                input{
+
+                input {
                     background: transparent;
                     border: transparent;
                     padding-right: 7px;
@@ -46,7 +53,8 @@
 
             }
         }
-        &__filter{
+
+        &__filter {
             padding: 0 5px;
             margin-top: 25px;
             width: 500px;
@@ -54,7 +62,8 @@
             align-items: center;
             justify-content: space-between;
             border-bottom: 1px solid #393C49;
-            &__item{
+
+            &__item {
                 padding-bottom: 13px;
                 color: #fff;
                 border: transparent;
@@ -63,7 +72,8 @@
                 justify-content: space-between;
                 flex-direction: column;
                 position: relative;
-                &::after{
+
+                &::after {
                     position: absolute;
                     content: '';
                     width: 70%;
@@ -72,17 +82,20 @@
                 }
             }
         }
-        &__option{
+
+        &__option {
             padding-top: 35px;
             margin-bottom: 30px;
             display: flex;
             justify-content: space-between;
-            &__title{
+
+            &__title {
                 font-weight: 700;
                 font-size: 30px;
                 line-height: 140%;
             }
-            &__select{
+
+            &__select {
                 padding: 0 5px;
                 width: 100px;
                 height: 50px;
@@ -92,7 +105,8 @@
                 color: #fff;
             }
         }
-        &__card{
+
+        &__card {
             margin-bottom: 0;
             border-radius: 2rem;
             height: 600px;
@@ -101,7 +115,8 @@
             justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
-            &__item{
+
+            &__item {
                 border-radius: 1rem;
                 margin-top: 100px;
                 display: flex;
@@ -111,14 +126,16 @@
                 background: var(--black);
                 width: 190px;
                 height: 225px;
-                &__img{
+
+                &__img {
                     margin-top: -70px;
                     width: 150px;
                     height: 150px;
                     border-radius: 50%;
                     object-fit: cover;
                 }
-                &__title{
+
+                &__title {
                     margin: auto;
                     padding: 15px;
                     font-weight: 500;
@@ -126,10 +143,12 @@
                     line-height: 130%;
                     color: #fff;
                 }
-                &__price{
+
+                &__price {
                     color: #fff;
                 }
-                &__have{
+
+                &__have {
                     color: #fff;
                 }
             }
@@ -137,16 +156,19 @@
     }
 }
 
-.act{
+.act {
     color: var(--orange);
-    &::after{
+
+    &::after {
         background: var(--orange);
     }
 }
+
 @media (max-width: 1450px) {
-    .main{
-        &__container{
-            &__card{
+    .main {
+        &__container {
+            width: 750px;
+            &__card {
                 height: 530px;
             }
         }
