--- a/src/Components/Orders/Orders.scss
+++ b/src/Components/Orders/Orders.scss
@@ -1,22 +1,26 @@
-.orders{
+.orders {
     background: var(--black);
     width: 460px;
     height: 100vh;
     color: #fff;
-    &__container{
+
+    &__container {
         width: 380px;
         margin: 0 auto;
-        &__title{
+
+        &__title {
             margin-top: 25px;
         }
-        &__list{
+
+        &__list {
             margin-top: 25px;
             width: 250px;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            &__item{
-                button{
+
+            &__item {
+                button {
                     font-weight: 550;
                     color: var(--orange);
                     padding: 11px;
@@ -26,47 +30,57 @@
                 }
             }
         }
-        &__list1{
+
+        &__list1 {
             margin-bottom: 1px solid #393C49;
             margin-top: 25px;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            &__item{
+
+            &__item {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
                 width: 120px;
             }
         }
-        &__list2{
+
+        &__list2 {
             overflow-y: scroll;
             height: 500px;
-            &__item{
+
+            &__item {
                 margin-top: 15px;
                 padding-bottom: 15px;
                 border-bottom: 1px solid #393C49;
-                &__top{
+
+                &__top {
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
-                    &__left{
+
+                    &__left {
                         display: flex;
                         align-items: center;
-                        &__img{
+
+                        &__img {
                             width: 45px;
                             height: 45px;
                             border-radius: 50%;
                         }
-                        &__samp{
+
+                        &__samp {
                             margin-left: 10px;
-                            &__title{
+
+                            &__title {
                                 width: 150px;
                                 font-weight: 500;
                                 font-size: 14px;
                                 line-height: 130%;
                             }
-                            &__price{
+
+                            &__price {
                                 color: #ABBBC2;
                                 font-weight: 500;
                                 font-size: 12px;
@@ -75,7 +89,8 @@
                             }
                         }
                     }
-                    &__right__have{
+
+                    &__right__have {
                         width: 50px;
                         height: 50px;
                         padding: 14px 12px 14px 18px;
@@ -83,29 +98,34 @@
                         border: 1px solid #393C49;
                         border-radius: 8px;
                     }
-                    &__right__price{
+
+                    &__right__price {
                         margin-top: -15px;
                     }
                 }
-                &__bottom{
+
+                &__bottom {
                     margin-top: 15px;
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
-                    input{
+
+                    input {
                         padding: 14px 96px 14px 14px;
                         background: #2D303E;
                         border: 1px solid #393C49;
                         border-radius: 8px;
                     }
-                    button{
+
+                    button {
                         width: 50px;
                         height: 50px;
                         border: 1px solid var(--orange);
                         color: var(--orange);
                         border-radius: 8px;
                         background: transparent;
-                        &:hover{
+
+                        &:hover {
                             color: #FF7CA3;
                             border: 1px solid #FF7CA3;
                         }
@@ -113,25 +133,31 @@
                 }
             }
         }
-        &__bottom{
-            &__list{
+
+        &__bottom {
+            &__list {
                 border-top: 1px solid #393C49;
-                &__item{
+
+                &__item {
                     width: 100%;
-                    &__list{
+
+                    &__list {
                         display: flex;
                         justify-content: space-between;
-                        &__title{
+
+                        &__title {
                             margin-top: 20px;
                             color: #ABBBC2;
                         }
-                        &__price{
+
+                        &__price {
                             margin-top: 20px;
                         }
                     }
                 }
             }
-            &__btn{
+
+            &__btn {
                 border: transparent;
                 width: 100%;
                 height: 50px;
@@ -145,10 +171,44 @@
 }
 
 @media (max-width:1450px) {
-    .orders{
-        &__container{
-            &__list2{
+    .orders {
+        width: 400px;
+
+        &__container {
+            width: 300px;
+
+            &__list2 {
+                overflow-y: scroll;
                 height: 440px;
+
+                &__item {
+                    &__top {
+
+                        &__left {
+                            &__samp {
+
+                                &__title {
+                                    width: 120px;
+                                }
+
+                            }
+                        }
+
+                        &__right__have {
+                            margin-left: -30px;
+                            width: 50px;
+                            height: 50px;
+                            padding: 14px 12px 14px 18px;
+                        }
+                    }
+
+                    &__bottom {
+
+                        input {
+                            padding: 14px;
+                        }
+                    }
+                }
             }
         }
     }
